Resolved scrollbar corner clipping

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,6 @@ a {
 
 ::-webkit-scrollbar-track-piece  {
   background-color: darkslategray;
-  border-radius: 0 5px 5px 0;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
